fix broken footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
     </div>
 </footer>
 {% else %}
-<footer class="footer">
+<footer class="footer mt-auto py-3">
     <div class="container">
        <span class="text-white" style="font-family:Courgette;">{{ site.title }}</span>
         {% include social.html %}
