--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -48,7 +48,7 @@
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="" aria-label="Search">
+      <input class="form-control mr-sm-2" type="search" placeholder="Ask me anything" aria-label="Search">
       {% if site.color-scheme == "demo" %}
       <button class="btn btn-light btn-sm my-2 my-sm-0" type="submit">Search</button>
       {% else %}
