--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,6 +2,24 @@
 layout: default
 ---
 
+<!--  HELP TIPS SECTION  -->
+<!-- used only for develop mode, disable these in _config.yml with `help_tips: false` -->
+{% if site.help_tips %}
+<div class="toast animate__animated animate__pulse animate__infinite" role="alert" aria-live="assertive" aria-atomic="true" data-autohide="false" data-delay="10000" style="position: absolute; top: 10px; right: 10px;z-index: 10000;">
+  <div class="toast-header">
+    <img src="/assets/img/icons/favicon-16x16.png" class="rounded mr-2" alt="...">
+    <strong class="mr-auto">Tyler Butler</strong>
+    <small class="text-muted">11 mins ago</small>
+    <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="toast-body">
+    Thanks for checking out Jekyll-Theme-Dumbarton ! This theme was developed by <a href="https://github.com/tcbutler320">Tyler Butler</a>. If you're interested in using this in your own website, checkout the project on <a href="https://github.com/tcbutler320/Jekyll-Theme-Dumbarton">Github</a>
+  </div>
+</div>
+{% endif %}
+
 <!-- ABOUT ME SECTION -->
 <div class="card mx-auto border-light">
   <div class="row no-gutters">
@@ -33,24 +51,6 @@ layout: default
     </div>
   </div>
 </div>
-
-<!-- TOAST FOR DEMO PURPOSES ONLY -->
-<!-- TODO: REMOVE -->
-<!-- 
-<div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-  <div class="toast-header">
-    <img src="..." class="rounded mr-2" alt="...">
-    <strong class="mr-auto">Bootstrap</strong>
-    <small class="text-muted">11 mins ago</small>
-    <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-      <span aria-hidden="true">&times;</span>
-    </button>
-  </div>
-  <div class="toast-body">
-    Thanks for checking out Jekyll-Theme-Dumbarton !
-  </div>
-</div>
--->
 
 <!-- HOME HIGHLIGHTS SECTION --> 
 <h5 class="card-title text-center mb-3"></h5>
@@ -92,7 +92,7 @@ layout: default
           {% if section.first %}
             {% if section.name == "Publications" %}
               <div class="tab-pane active overflow-auto" id="{{section.id}}" role="tabpanel">
-                <h5 class="card-title text-center"><a href="/{{ section.url }}" class="highlighted">{{section.description}}</a></h5>
+                <h5 class="card-title text-center" style="font-family:Courgette;"><a href="/{{ section.url }}" class="highlighted">{{section.description}}</a></h5>
                 <p class="card-text">{% bibliography -f papers %}</p>
               </div>
             {% else %}
@@ -103,12 +103,12 @@ layout: default
           {% else %}  
             {% if section.name == "Presentations" %}
               <div class="tab-pane overflow-auto" id="{{section.id}}" role="tabpanel" aria-labelledby="{{section.id}}-tab">  
-                <h5 class="card-title text-center"><a href="/{{ section.url }}" class="highlighted">{{section.description}}</a></h5>
+                <h5 class="card-title text-center" style="font-family:Courgette;"><a href="/{{ section.url }}" class="highlighted">{{section.description}}</a></h5>
                 <p class="card-text">{% bibliography -f presentations %}</p>              
               </div>
             {% elsif section.name == "Projects" %}
               <div class="tab-pane overflow-auto" id="{{section.id}}" role="tabpanel" aria-labelledby="{{section.id}}-tab">  
-                <h5 class="card-title text-center"><a href="/{{ section.url }}" class="highlighted">{{section.description}}</a></h5>
+                <h5 class="card-title text-center" style="font-family:Courgette;"><a href="/{{ section.url }}" class="highlighted">{{section.description}}</a></h5>
                 <div class="row row-cols-1 row-cols-md-2 ">
                   {% for projects in site.data.projects %}
                     <div class="col mb-4">
@@ -125,7 +125,7 @@ layout: default
               </div>
             {% elsif section.name == "Teaching" %}
               <div class="tab-pane overflow-auto" id="{{section.id}}" role="tabpanel" aria-labelledby="{{section.id}}-tab">  
-                <h5 class="card-title text-center"><a href="/{{ section.url }}" class="highlighted">{{section.description}}</a></h5>
+                <h5 class="card-title text-center" style="font-family:Courgette;"><a href="/{{ section.url }}" class="highlighted">{{section.description}}</a></h5>
                   <div class="accordion" id="accordionExample">
                     {% for courses in site.data.courses %}
                     <div class="card">
@@ -147,7 +147,7 @@ layout: default
               </div>
             {% elsif section.name == "Coursework" %}
               <div class="tab-pane overflow-auto" id="{{section.id}}" role="tabpanel" aria-labelledby="{{section.id}}-tab">  
-                <h5 class="card-title text-center"><a href="/{{ section.url }}" class="highlighted">{{section.description}}</a></h5>
+                <h5 class="card-title text-center" style="font-family:Courgette;"><a href="/{{ section.url }}" class="highlighted">{{section.description}}</a></h5>
                 <div class="list-group">
                 {% for courses in site.data.courses %}
                   <button type="button" class="list-group-item list-group-item-action">{{ courses.Course }}</button>
@@ -183,7 +183,7 @@ layout: default
 <!-- OPTIONAL TOAST JS FUNCTION-->
 <script>
     $(document).ready(function() {
-        $(".toast").toast('show');
+        $(".toast").toast("show");
     });
 </script>
 
@@ -216,3 +216,4 @@ var myBarChart = new Chart(ctx, {
     }
 });
 </script>
+
