update blog post layout

--- a/_layouts/post-2.html
+++ b/_layouts/post-2.html
@@ -1,11 +1,7 @@
 ---
 layout: page
-permalink: /blog.html
-title: Blog
-description: I write about cyber threat intelligence
-header-img:  
-last-updated: 2020-10-30 5:55 PM
 ---
+
 
     <!-- Page Content -->
     <div class="container">
@@ -13,29 +9,21 @@ last-updated: 2020-10-30 5:55 PM
       <div class="row">
 
         <!-- Blog Entries Column -->
-        <div class="col-md-8">
-
-          <h1 class="my-4" style="font-family:Courgette;">{{ page.title }}</h1>
-          
+        <div class="col-md-8">          
           <!-- Blog Post -->
-          {% for post in site.posts %}
             <div class="card mb-4">
               <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
               <div class="card-body">
-                <h2 class="card-title">{{ post.title }}</h2>
-                <p class="card-text">{{ post.description }}</p>
-                {% if site.nav-color == "demo"  %}
-                <a href="{{ post.url }}" class="btn btn-primary text-white" style="background-color:#00334e">Read Article &rarr;</a>
-                {% else %}
-                <a href="{{ post.url }}" class="btn btn-primary">Read Article &rarr;</a>
+                <h1 class="card-title" style="font-family:Courgette;">{{ page.title }}</h1>
+                {% if page.author %}
+                <p><i>Written By: {{ page.author }}</i></p>
                 {% endif %}
+                <p class="card-text">{{ content | markdownify }}</p>
               </div>
               <div class="card-footer text-muted">
-                Posted on {{ post.date }} by
-                <a href="#">{{ post.author }}</a>
+                Posted on {{ page.date }} 
               </div>
             </div>
-          {% endfor %}
 
           <!-- Pagination -->
           <ul class="pagination justify-content-center mb-4">
