add gitalk for comment system on blog

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -59,6 +59,10 @@
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script> 
 
+<!--  GIT TALK CDN  for comment system -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css">
+<script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>
+
 
 <!-- Provides information about an author or another person -->
 <link rel="me" href="mailto:{{ site.email }}">
