--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 {% if site.color-scheme=="demo" %}
-<footer class="footer" style="background-color:{{ site.demo-color }};">
+<footer class="footer mt-auto py-3" style="background-color:{{ site.demo-color }};">
     <div class="container">
      <span class="text-white" style="font-family:Courgette;">{{ site.title }}</span>
         {% include social.html %}
