--- a/_layouts/post-2.html
+++ b/_layouts/post-2.html
@@ -19,6 +19,7 @@ layout: page
                 <p><i>Written By: {{ page.author }}</i></p>
                 {% endif %}
                 <p class="card-text">{{ content | markdownify }}</p>
+                <div id="gitalk-container"></div>
               </div>
               <div class="card-footer text-muted">
                 Posted on {{ page.date }} 
@@ -107,3 +108,18 @@ layout: page
 
     </div>
     <!-- /.container -->
+
+
+<script> 
+const gitalk = new Gitalk({
+  clientID: '{{ site.gittalk_client_id }}',
+  clientSecret: '{{ site.gittalk_client_secret }}',
+  repo: '{{ site.gittalk_repo }}',      // The repository of store comments,
+  owner: '{{ site.gittalk_owner }}',
+  admin: ['{{sitte.gittalk_admin }}'],
+  id: location.pathname,      // Ensure uniqueness and length less than 50
+  distractionFreeMode: '{{ site.gittalk_distraction_mode }}'  // Facebook-like distraction free mode
+})
+
+gitalk.render('gitalk-container')
+</script>
