--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,7 @@ html {
   .footer {
     position: absolute;
     bottom: 0;
+    left: 0;
     width: 100%;
     height: 60px; /* Set the fixed height of the footer here */
     line-height: 60px; /* Vertically center the text there */
