--- a/_layouts/post-2.html
+++ b/_layouts/post-2.html
@@ -117,7 +117,7 @@ const gitalk = new Gitalk({
   repo: '{{ site.gittalk_repo }}',      // The repository of store comments,
   owner: '{{ site.gittalk_owner }}',
   admin: ['{{sitte.gittalk_admin }}'],
-  id: location.pathname,      // Ensure uniqueness and length less than 50
+  id: '{{ page.url }}',      // Ensure uniqueness and length less than 50
   distractionFreeMode: '{{ site.gittalk_distraction_mode }}'  // Facebook-like distraction free mode
 })
 
