--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,19 +1,65 @@
 ---
-layout: default
+layout: page
 ---
-<div class="card border-light mb-3">
-  {% if page.image %}
-    <img src="{{ page.image }}" class="card-img-top" alt="{{ page.caption }}">
-  {% else %}
-  <div class="card border-light">
-  {% endif %}
-  <div class="card-body">
-    <h5 class="card-title">{{ page.title }}</h5>
-    {% if page.author %}
-    <h6 class="card-subtitle mb-2 text-muted">By: {{ page.author }}</h6>
-    {% endif %}
-    <p class="card-text">{{ content }}</p>
-  </div>
-  <div class="card-footer bg-dark text-white">Share this post on social  &nbsp;&nbsp;&nbsp;&nbsp; {% include share-light.html %}</div>
 
+         
+<!-- Blog Post -->
+  <div class="card"  style="max-width: 100%;">
+    <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
+    <div class="card-body">
+      <h1 class="card-title" style="font-family:Courgette;">{{ page.title }}</h1>
+      {% if page.author %}
+      <p><i>Written By: {{ page.author }}</i></p>
+      {% endif %}
+      <p class="card-text">{{ content | markdownify }}</p>
+      {% if site.comments %}
+      <div id="gitalk-container"></div>
+      {% endif %}
+    </div>
+    <div class="card-footer text-muted">
+      Posted on {{ page.date }} 
+    </div>
+  </div>
+
+  <!-- Bottom Widget -->
+  <div class="card mt-2">
+    <h5 class="card-header">All Articles</h5>
+    <div class="card-body">
+    {% for post in site.posts %}
+          <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+    {% endfor %}
+    </div>
+  </div>
+
+<!-- Categories Widget -->
+<div class="card mt-2">
+  <h5 class="card-header">Categories</h5>
+  <div class="card-body">
+    <div class="row">
+      <div class="col-lg-6">
+        <ul class="list-unstyled mb-0">
+          {% for tag in site.tags %}
+          <li>
+            <a href="#" class="btn btn-sm mt-1 mb-1 text-white" style="background-color:{{ site.card-color }}">{{ tag[0] }}</a>
+          </li>
+          {% endfor %}
+        </ul>
+      </div>
+    </div>
+  </div>
 </div>
+
+
+{% if site.comments %}
+  <script> 
+  const gitalk = new Gitalk({
+    clientID: '{{ site.gitalk_client_id }}',
+    clientSecret: '{{ site.gitalk_client_secret }}',
+    repo: '{{ site.gitalk_repo }}',
+    owner: '{{ site.gitalk_owner }}',
+    admin: '{{ site.gitalk_admin }}',
+    id: '{{ site.gitalk_client_id }}' // Facebook-like distraction free mode
+  })
+  gitalk.render('gitalk-container')
+  </script> 
+{% endif %}
