--- a/_includes/head-blog.html
+++ b/_includes/head-blog.html
@@ -49,7 +49,7 @@
 <!-- meta name="geo.placename" content="city/town"><eg. content="New York City" -->
 
 <!-- Link to an external CSS file -->
-<link href="https://fonts.googleapis.com/css2?family={{ site.google-font }}&family=Parisienne&family=Courgette&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Parisienne&family=Courgette&display=swap" rel="stylesheet">
 
 <link rel="stylesheet" href="/css/main.css">
 <!-- BootStrap CDN --> 
@@ -104,11 +104,7 @@
 <meta name="twitter:image:alt" content="{{ page.image_alt }}">
 
 <!-- Used for adding in-document CSS -->
-<style>
-body {
-  font-family: '{{ site.google-font-name }}', cursive;
-}
-</style>
+
 
 
 <!-- JavaScript & No-JavaScript tags -->
