add absolute readme image url to satisft https://jekyll-themes.com/submit/ requirements

--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,10 @@ html {
     background-color: #f5f5f5;
   }
 
+code {
+    font: 0.85em Monaco, Courier, Monospace;
+}
+
 
 a.highlighted, a.highlighted:link {
   color: black;
