--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,7 +21,7 @@ layout: default
 {% endif %}
 
 <!-- ABOUT ME SECTION -->
-<div class="card mx-auto border-light">
+<div class="card mx-auto border-0">
   <div class="row no-gutters">
     <div class="col-md-4">
       {% if site.animate %}
@@ -53,7 +53,7 @@ layout: default
 </div>
 
 <!-- HOME HIGHLIGHTS SECTION --> 
-<h5 class="card-title text-center mb-3"></h5>
+<h5 class="card-title text-center mb-3 border-0"></h5>
 {% if site.animate %}
 <div class="card mx-auto animate__animated animate__slideInUp animate__delay-1s" style="max-width: 100%;">
 {% else %}
