--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,36 +1,34 @@
 <!DOCTYPE html>
+{% assign theme = site.data.themes[site.ui_theme] %}
 <html>
   {% include head-blog.html %}
   <body>
     {% include nav.html %}
-    <div class="dumbarton-spacer-sm"></div>
     <div class="container">
       {% if page.header-img %}
-      <div class="card mb-3 border-0">
-        <img class="card-img-top rounded-lg" src="{{ page.header-img }}" alt="Card image cap">
+      <div class="card border-0">
           <div class="card-body">
             <p class="card-text">
                 {{ content }}
             </p>
             {% if page.last-updated %}
-              <p class="card-text"><small class="text-muted">Last updated {{ page.last-updated }}</small></p>
+              <p class="card-text"><small class="text-muted">This page was last updated at {{ "now" | date: "%Y-%m-%d %H:%M" }}.</small></p>
             {% endif %}
-        </div>
+          </div>
       </div>
       {% else %}
-      <div class="card mb-3 border-0">
+      <div class="card border-0">
           <div class="card-body">
             <p class="card-text">
                 {{ content }}
             </p>
             {% if page.last-updated %}
-              <p class="card-text"><small class="text-muted">Last updated {{ page.last-updated }}</small></p>
+              <p class="card-text"><small class="text-muted">This page was last updated at {{ "now" | date: "%Y-%m-%d %H:%M" }}.</small></p>
             {% endif %}
-        </div>
+          </div>
       </div>
       {% endif %}
     </div>
-    <div class="dumbarton-spacer"></div>
     {% include footer.html %}
   </body>
 </html>
