--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,65 +1,23 @@
 ---
 layout: page
 ---
+{% assign theme = site.data.themes[site.ui_theme] %}
 
-         
-<!-- Blog Post -->
-  <div class="card"  style="max-width: 100%;">
-    <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
-    <div class="card-body">
-      <h1 class="card-title" style="font-family:Courgette;">{{ page.title }}</h1>
-      {% if page.author %}
-      <p><i>Written By: {{ page.author }}</i></p>
-      {% endif %}
-      <p class="card-text">{{ content | markdownify }}</p>
-      {% if site.comments %}
-      <div id="gitalk-container"></div>
-      {% endif %}
-    </div>
-    <div class="card-footer text-muted">
-      Posted on {{ page.date }} 
-    </div>
-  </div>
 
-  <!-- Bottom Widget -->
-  <div class="card mt-2">
-    <h5 class="card-header">All Articles</h5>
-    <div class="card-body">
-    {% for post in site.posts %}
-          <li><a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-    </div>
-  </div>
 
-<!-- Categories Widget -->
-<div class="card mt-2">
-  <h5 class="card-header">Categories</h5>
+<div class="blogcard {{ page.card }} mb-4 mt-4" style="width: 100%;">
   <div class="card-body">
-    <div class="row">
-      <div class="col-lg-6">
-        <ul class="list-unstyled mb-0">
-          {% for tag in site.tags %}
-          <li>
-            <a href="#" class="btn btn-sm mt-1 mb-1 text-white" style="background-color:{{ site.card-color }}">{{ tag[0] }}</a>
-          </li>
-          {% endfor %}
-        </ul>
-      </div>
-    </div>
+    <h5 class="card-title text-center" style="font-size:{{ theme.post-tag-size }};">{{ page.tag }}</h5>
+    <h5 class="card-title text-center" style="font-size:{{ theme.post-title-size }};font-weight:{{ theme.post-font-weight }};">{{ page.title }}</h5>
+    <h6 class="card-subtitle text-center" style="font-size:{{ theme.post-author-size }};">Author: {{page.author}} | Published {{page.date}}</h6>
+    {% include social-cards-copy.html %}
   </div>
 </div>
 
+<div class="card border-0" style="width: 100%;">
+  <div class="card-body">
+    <p class="card-text">{{ content | markdownify }}</p>
+    <a href="https://twitter.com/tbutler0x90?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @tbutler0x90</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  </div>
+</div>
 
-{% if site.comments %}
-  <script> 
-  const gitalk = new Gitalk({
-    clientID: '{{ site.gitalk_client_id }}',
-    clientSecret: '{{ site.gitalk_client_secret }}',
-    repo: '{{ site.gitalk_repo }}',
-    owner: '{{ site.gitalk_owner }}',
-    admin: '{{ site.gitalk_admin }}',
-    id: '{{ site.gitalk_client_id }}' // Facebook-like distraction free mode
-  })
-  gitalk.render('gitalk-container')
-  </script> 
-{% endif %}
