add dark theme UI elements

--- a/_includes/education.html
+++ b/_includes/education.html
@@ -1,15 +1,16 @@
-        <h5 class="card-title">Education</h5>
-        <ul class="list-unstyled">
-        {% for entry in site.data.education %}
-          <li class="media">
-            <img src="{{ entry.Icon }}" class="mr-3" alt="...">
-            <div class="media-body">
-              <h5>{{ entry.School }}</h5>
-              <p><i>{{ entry.Program }}</i></p>
-              {% if entry.Degree %}
-                <p>{{ entry.Degree }}</p>
-              {% endif %}
-            </div>
-          </li>
-          {% endfor %}
-        </ul>
+ {% assign theme = site.data.themes[site.ui_theme] %}
+  <h5 class="card-title" style="font-family:{{ theme.education-title-font}};font-size:{{ theme.education-title-size }};color:{{theme.education-font-color}};">Education & Certifications</h5>
+  <ul class="list-unstyled">
+  {% for entry in site.data.education %}
+    <li class="media">
+      <img src="{{ entry.Icon }}" class="mr-3" alt="...">
+      <div class="media-body">
+        <h5 style="font-family:{{ theme.education-entry-font}};font-size:{{ theme.education-entry-size }};color:{{theme.education-font-color}};">{{ entry.School }}</h5>
+        <p style="font-family:{{ theme.education-entry-font}};font-size:{{ theme.education-section-size }};color:{{theme.education-font-color}};"><i>{{ entry.Program }}</i></p>
+        {% if entry.Degree %}
+          <p>{{ entry.Degree }}</p>
+        {% endif %}
+      </div>
+    </li>
+    {% endfor %}
+  </ul>
