--- a/_includes/head-blog.html
+++ b/_includes/head-blog.html
@@ -116,6 +116,9 @@
         $(".toast").toast('show');
     });
 </script> -->
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.6/clipboard.min.js"></script>
+
 <noscript>
   <!-- No JS alternative -->
 </noscript>
