--- a/css/main.css
+++ b/css/main.css
@@ -536,20 +536,20 @@ border-radius: 0%;
 
 .glowing-border {
   outline: none;
-  border-color: #9ecaed;
-  box-shadow: 0 0 10px #9ecaed;
+  border-color: #495464;
+  box-shadow: 0 0 10px #495464;
 }
 
 .glowing-border:focus { 
   outline: none;
-  border-color: #9ecaed;
-  box-shadow: 0 0 10px #9ecaed;
+  border-color: #495464;
+  box-shadow: 0 0 10px #495464;
 }
 
 .glowing-border:hover { 
   outline: none;
-  border-color: #9ecaed;
-  box-shadow: 0 0 20px #9ecaed;
+  border-color: #495464;
+  box-shadow: 0 0 20px #495464;
 }
 
 
