add katex css to head

--- a/_includes/head-blog.html
+++ b/_includes/head-blog.html
@@ -48,6 +48,7 @@
 
 <!-- Link to an external CSS file -->
 <link href="https://fonts.googleapis.com/css2?family=Parisienne&family=Courgette&family=Lobster&family=Pacifico&family=Yellowtail&family=Noto+Sans+JP:wght@400;900&family=Poppins:wght@500&family=Righteous&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.15.2/dist/katex.min.css" integrity="sha384-MlJdn/WNKDGXveldHDdyRP1R4CTHr3FeuDNfhsLPYrq2t0UBkUdK2jyTnXPEK1NQ" crossorigin="anonymous">
 
 <link rel="stylesheet" href="/css/main.css">
 <!-- BootStrap CDN --> 
